--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -1,13 +1,13 @@
 [preset.0]
 
-name="Breakout"
+name="breakout_gd"
 platform="HTML5"
 runnable=true
 custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path=""
+export_path="../../../Desktop/tradutor/html5/index.html"
 script_export_mode=1
 script_encryption_key=""
 
@@ -35,14 +35,14 @@ progressive_web_app/background_color=Color( 0, 0, 0, 1 )
 
 [preset.1]
 
-name="Breakout"
+name="breakout_gd"
 platform="Android"
 runnable=true
 custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path=""
+export_path="../../../Desktop/tradutor/html/executavel/.apk"
 script_export_mode=1
 script_encryption_key=""
 
@@ -65,14 +65,11 @@ keystore/release_password=""
 one_click_deploy/clear_previous_install=false
 version/code=1
 version/name="1.0"
-version/min_sdk=19
-version/target_sdk=30
 package/unique_name="org.godotengine.$genname"
 package/name=""
 package/signed=true
 package/classify_as_game=true
 package/retain_data_on_uninstall=false
-package/exclude_from_recents=false
 launcher_icons/main_192x192=""
 launcher_icons/adaptive_foreground_432x432=""
 launcher_icons/adaptive_background_432x432=""
@@ -80,8 +77,6 @@ graphics/32_bits_framebuffer=true
 graphics/opengl_debug=false
 xr_features/xr_mode=0
 xr_features/hand_tracking=0
-xr_features/hand_tracking_frequency=0
-xr_features/passthrough=0
 screen/immersive_mode=true
 screen/support_small=true
 screen/support_normal=true
@@ -241,14 +236,14 @@ permissions/write_user_dictionary=false
 
 [preset.2]
 
-name="Breakout"
+name="breakout_gd"
 platform="Windows Desktop"
 runnable=true
 custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path=""
+export_path="../../../Desktop/tradutor/html/executavel/breakout/breakout_gd.exe"
 script_export_mode=1
 script_encryption_key=""
 
@@ -275,22 +270,22 @@ codesign/custom_options=PoolStringArray(  )
 application/icon=""
 application/file_version=""
 application/product_version=""
-application/company_name=""
-application/product_name=""
+application/company_name="Dragao Games"
+application/product_name="Breakout_gd"
 application/file_description=""
 application/copyright=""
 application/trademarks=""
 
 [preset.3]
 
-name="Breakout"
+name="breakout_gd"
 platform="Linux/X11"
 runnable=true
 custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path=""
+export_path="../../../Desktop/tradutor/linux/breakout/breakout_gd.x86_64"
 script_export_mode=1
 script_encryption_key=""
 
@@ -308,7 +303,7 @@ texture_format/no_bptc_fallbacks=true
 
 [preset.4]
 
-name="Breakout"
+name="breakout_gd"
 platform="iOS"
 runnable=true
 custom_features=""
@@ -374,3 +369,36 @@ portrait_launch_screens/iphone_1125x2436=""
 portrait_launch_screens/ipad_768x1024=""
 portrait_launch_screens/ipad_1536x2048=""
 portrait_launch_screens/iphone_1242x2208=""
+
+[preset.5]
+
+name="Mac OSX"
+platform="Mac OSX"
+runnable=true
+custom_features=""
+export_filter="all_resources"
+include_filter=""
+exclude_filter=""
+export_path=""
+script_export_mode=1
+script_encryption_key=""
+
+[preset.5.options]
+
+custom_template/debug=""
+custom_template/release=""
+application/name=""
+application/info="Made with Godot Engine"
+application/icon=""
+application/identifier=""
+application/signature=""
+application/app_category="Games"
+application/short_version="1.0"
+application/version="1.0"
+application/copyright=""
+display/high_res=false
+privacy/camera_usage_description=""
+privacy/microphone_usage_description=""
+texture_format/s3tc=true
+texture_format/etc=false
+texture_format/etc2=false
